adding button to take to top of the page

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <p><input class="short-input" type="text" placeholder="email" required name="Email"></p>
       <p><input class="long-input" type="text" placeholder="message" required name="Message"></p>
       <p>
-        <button class="button" type="submit">
+        <button onclick="topFunction()" id="myBtn" title="Go to top">
           send
         </button>
       </p>
