--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <link href="https://fonts.googleapis.com/css?family=Fredoka+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/glacial-indifference" type="text/css"/>
   <link rel="stylesheet" href="./CSS/main.css">
+  <script src="./contact_form.js"> </script>
   <link rel="icon" 
       type="image/png" 
       href="./img/favicon.png">
